--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,9 @@ runs:
   using: "composite"
   steps:
     - uses: astral-sh/setup-uv@v3
+    - run: pwd && git ls-files
+      shell: bash
+
     - id: head_on_main
       run: |
         git fetch origin ${{ inputs.main-branch-name }} &&
