--- a/action.yml
+++ b/action.yml
@@ -12,8 +12,11 @@ runs:
   using: "composite"
   steps:
     - uses: astral-sh/setup-uv@v3
-    - run: pwd && git ls-files
+    - name: Set GitHub Path
+      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
       shell: bash
+      env:
+        GITHUB_ACTION_PATH: ${{ github.action_path }}
 
     - id: head_on_main
       run: |
