add back ls-files

--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,9 @@ runs:
   using: "composite"
   steps:
     - uses: astral-sh/setup-uv@v3
+    - run: pwd && git ls-files
+      shell: bash
+
     - name: Set GitHub Path
       run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
       shell: bash
