--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,5 @@ description = "Maintain a linear history of Alembic migrations without having to
 readme = "README.md"
 dependencies = [
     "alembic>=1.13.3",
+    "pytest>=8.3.3",
 ]
