use dry run for e2e

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,5 @@ jobs:
         with:
           token: ${{ secrets.ALEMBIC_REBASE_TOKEN }}
       - uses: ChannyClaus/alembic-rebase@main
+        with:
+          dry-run: true
