add shell: bash

--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,7 @@ runs:
   steps:
     - uses: astral-sh/setup-uv@v3
     - run: cd ${{ inputs.working-directory }}
+      shell: bash
     - id: head_on_main
       run: |
         git fetch origin ${{ inputs.main-branch-name }} &&
