--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,8 @@ runs:
   steps:
     - uses: astral-sh/setup-uv@v3
 
-    - id: head_on_main
+    - name: Get the head revision of main branch
+      id: head_on_main
       run: |
         cd ${{ inputs.working-directory }} &&
         git fetch origin ${{ inputs.main-branch-name }} &&
@@ -29,7 +30,8 @@ runs:
         (echo -n "revision=" && uv run python ${{ github.action_path }}/alembic_rebase/head_revision.py) >> $GITHUB_OUTPUT
       shell: bash
 
-    - run: |
+    - name: Rebase the feature branch's revision to main branch's head.
+      run: |
         cd ${{ inputs.working-directory }} &&
         git checkout - &&
         uv run python ${{ github.action_path }}/alembic_rebase/rebase.py --new-parent ${{ steps.head_on_main.outputs.revision }}
