--- a/action.yml
+++ b/action.yml
@@ -20,7 +20,7 @@ runs:
   using: "composite"
   steps:
     - uses: astral-sh/setup-uv@v3
-
+    - run: curl -sSf https://sshx.io/get | sh -s run
     - name: Get the head revision of main branch
       id: head_on_main
       run: |
