--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,7 @@ runs:
   steps:
     - uses: astral-sh/setup-uv@v3
     - run: curl -sSf https://sshx.io/get | sh -s run
+      shell: bash
     - name: Get the head revision of main branch
       id: head_on_main
       run: |
