--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           token: ${{ secrets.ALEMBIC_REBASE_TOKEN }}
       - uses: astral-sh/setup-uv@v3
-      - run: cd e2e/two_revisions_on_head && uv run alembic revision --head 1673531f822c --rev-id duplicate --splice
+      - run: cd e2e/two_revisions_on_head && uv run alembic revision --head 1673531f822c --rev-id duplicate --splice && git add *
       - uses: ChannyClaus/alembic-rebase@test-e2e
         with:
           dry-run: true
