--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,14 @@ jobs:
         with:
           token: ${{ secrets.ALEMBIC_REBASE_TOKEN }}
       - uses: astral-sh/setup-uv@v3
-      - run: cd e2e/two_revisions_on_head && uv run alembic revision --head 1673531f822c --rev-id duplicate --splice && git add *
+      - run: |
+          cd e2e/two_revisions_on_head &&
+          uv run alembic revision --head 1673531f822c --rev-id duplicate --splice &&
+          git add * &&
+          git config --global user.email "alembic-rebase@github-actions[bot]" &&
+          git config --global user.name "alembic-rebase[bot]" &&
+          git commit -m "duplicate revision"
+
       - uses: ChannyClaus/alembic-rebase@test-e2e
         with:
           dry-run: true
