--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,4 @@ jobs:
         with:
           dry-run: true
           working-directory: e2e/two_revisions_on_head
-      - run: uv run alembic upgrade head
+      - run: cd e2e/two_revisions_on_head && uv run alembic upgrade head
