--- a/action.yml
+++ b/action.yml
@@ -39,8 +39,10 @@ runs:
         cd ${{ inputs.working-directory }} &&
         git checkout - &&
         uv run python ${{ github.action_path }}/alembic_rebase/rebase.py --new-parent ${{ steps.head_on_main.outputs.revision }} &&
-        uv run alembic history
       shell: bash
+
+    - name: Display the modified history.
+      run: uv run alembic history | tail -r
 
     - uses: stefanzweifel/git-auto-commit-action@v5
       if: ${{ ! inputs.dry-run }}
