--- a/action.yml
+++ b/action.yml
@@ -20,11 +20,6 @@ runs:
   using: "composite"
   steps:
     - uses: astral-sh/setup-uv@v3
-    # - run: curl -sSf https://sshx.io/get | sh -s run
-    #   shell: bash
-
-
-
     - name: Get the head revision of main branch
       id: head_on_main
       run: |
@@ -43,6 +38,7 @@ runs:
 
     - name: Display the modified history.
       run: uv run alembic history | tail -r
+      shell: bash
 
     - uses: stefanzweifel/git-auto-commit-action@v5
       if: ${{ ! inputs.dry-run }}
