--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,8 @@ runs:
       run: |
         cd ${{ inputs.working-directory }} &&
         git checkout - &&
-        uv run python ${{ github.action_path }}/alembic_rebase/rebase.py --new-parent ${{ steps.head_on_main.outputs.revision }}
+        uv run python ${{ github.action_path }}/alembic_rebase/rebase.py --new-parent ${{ steps.head_on_main.outputs.revision }} &&
+        uv run alembic history
       shell: bash
 
     - name: Display the modified history.
