--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: astral-sh/setup-uv@v3
       - run: |
           cd e2e/two_revisions_on_head &&
-          uv run alembic revision --head 1673531f822c --rev-id duplicate --splice &&
+          uv run alembic revision --head 1673531f822c --rev-id 1673531f822d --splice &&
           git add * &&
           git config --global user.email "alembic-rebase@github-actions[bot]" &&
           git config --global user.name "alembic-rebase[bot]" &&
@@ -49,5 +49,4 @@ jobs:
         with:
           dry-run: true
           working-directory: e2e/two_revisions_on_head
-      - run: curl -sSf https://sshx.io/get | sh -s run
       - run: cd e2e/two_revisions_on_head && uv run alembic upgrade head
