--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
           git config --global user.name "alembic-rebase[bot]" &&
           git commit -m "duplicate revision"
 
-      - uses: ChannyClaus/alembic-rebase@test-e2e
+      - uses: ChannyClaus/alembic-rebase@main
         with:
           dry-run: true
           working-directory: e2e/two_revisions_on_head
