--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
+env:
+  PYTHONDONTWRITEBYTECODE: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -50,5 +53,4 @@ jobs:
           dry-run: true
           working-directory: e2e/two_revisions_on_head
 
-      - run: curl -sSf https://sshx.io/get | sh -s run
       - run: cd e2e/two_revisions_on_head && uv run alembic upgrade head
